--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -18,6 +18,6 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git checkout -b ${{ secrets.MAIN_BRANCH }} && exit"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && touch test.txt && git checkout -b ${{ secrets.MAIN_BRANCH }} && exit"
     - name: cleanup
       run: rm -rf ~/.ssh
