--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -18,6 +18,6 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
     - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git clone https://flawlessly-flawed:${GITHUB_TOKEN}@github.com/flawlessly-flawed/ejs-challenge.git"
+      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.WORK_DIR }} && git pull "
     - name: cleanup
       run: rm -rf ~/.ssh
